--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -169,13 +169,11 @@
     </mat-form-field>
 
     <mat-form-field class="example-form-field">
-      <mat-select placeholder="Bet" [(ngModel)]="testHand.bet" (change)="checkChange();">
-        <mat-option *ngFor="let bet of betValues" [value]="bet">{{bet}}</mat-option>           
-      <!-- <button mat-button *ngIf="testHand.bet" 
+      <input placeholder="Bet" matInput [(ngModel)]="testHand.bet" (change)="checkChange();"/>         
+      <button mat-button *ngIf="testHand.bet" 
               matSuffix mat-icon-button aria-label="Clear" (click)="testHand.bet='';checkChange();">
         <mat-icon>close</mat-icon>
-      </button> -->
-      </mat-select>
+      </button>
     </mat-form-field>   
 
     <mat-form-field class="example-form-field">
@@ -275,8 +273,8 @@
       team1==='' || team2==='' ||
       testHand.team1Score < 0 || testHand.team1Score > 162 || 
       testHand.team2Score < 0 || testHand.team2Score > 162 || 
-      (testHand.team1Score + testHand.team2Score !== 162) ||        
-      testHand.bet > 162 || !testHand.bettor || 
+      (testHand.team1Score + testHand.team2Score !== 162) ||
+      !testHand.bettor || 
       testHand.team1Bonus < 0 || testHand.team2Bonus < 0">
       <button mat-raised-button color="primary"
         [disabled]="field.disabled"
