--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,8 @@
     </div>
   </ul>
 </nav>
-<div class="container">      
+<div class="container">
+  <app-spinner></app-spinner>  
   <!-- Modal -->
   <div class="modal" 
         id="exampleModal" 
