--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -45,6 +45,12 @@
         </div>
       </div>
 
+      <div *ngIf="httpService.errorMessage !== null &&
+                  password === null &&
+                  email === null " class="alert alert-danger">
+        <span>Invalid credentials.</span>
+      </div>
+
       <div class="mt-3 mb-3">
           <a routerLink="/signup">New around here? Sign up</a>
       </div>
