added getters instead of accessing httpService directly

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div *ngIf="httpService.errorMessage !== null &&
+      <div *ngIf="getErrorMessage() !== null &&
                   password === null &&
                   email === null " class="alert alert-danger">
         <span>Invalid credentials.</span>
