--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -41,10 +41,10 @@
           </div>
         </div>
 
-        <div *ngIf="httpService.errorMessage !== null &&
+        <div *ngIf="getErrorMessage() !== null &&
                 password === null &&
                 email === null " class="alert alert-danger">
-        <span>{{httpService.errorMessage}}</span>
+        <span>{{errorMessage}}</span>
         </div>
       
       <div class="mt-3 mb-3">
