added + to create game button

--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -38,7 +38,7 @@
 <div>
   <button *ngIf="selectedTab===0"
           mat-raised-button color="primary" (click)="createGame()"
-          [disabled]="editMode">Create game</button>
+          [disabled]="editMode">+ Create game</button>
   <button *ngIf="selectedTab===1" 
           mat-raised-button color="primary" (click)="createHand()"
           [disabled]="editMode">+ New Hand</button>
