--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar  bg-dark navbar-dark">
   <span class="navbar-brand text-white">
     <!-- <div *ngIf="isLoggedIn()">{{ (getUser() | async)?.email.split('@')[0] }}</div> -->
-    <div *ngIf="isLoggedIn()">NG-Belot</div>
+    <div>NG-Belot</div>
   </span>
   <ul class="navbar-nav collapse ">
     <li class="nav-item" *ngIf="!isLoggedIn()">
