--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,8 +1,8 @@
-<div class="modal" 
-        id="deleteModal" 
-        tabindex="-1" 
-        role="dialog" 
-        aria-labelledby="deleteModalLabel" 
+<div class="modal"
+        id="deleteModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="deleteModalLabel"
         aria-hidden="true"
         [style.display]="confirmDelete ? 'block' : 'none'">
   <div class="modal-dialog" role="document">
@@ -15,7 +15,7 @@
           Delete hand? <br>
           <span>Bettor: {{toDeleteHand?.bettor}}</span><br>
           <span>Bet: {{toDeleteHand?.bet}}</span> <br>
-          <span>Suit: {{toDeleteHand?.suit}}</span><br>            
+          <span>Suit: {{toDeleteHand?.suit}}</span><br>
         </h5>
         <button type="button" class="close"  data-dismiss="modal" aria-label="Close"
                 (click)="toggleDelete()">
@@ -39,10 +39,10 @@
   <button *ngIf="selectedTab===0"
           mat-raised-button color="primary" (click)="createGame()"
           [disabled]="editMode">+ Create game</button>
-  <button *ngIf="selectedTab===1" 
+  <button *ngIf="selectedTab===1"
           mat-raised-button color="primary" (click)="createHand()"
           [disabled]="editMode">+ New Hand</button>
-  <mat-slide-toggle class="float-right" [checked]="editMode" color="warn"          
+  <mat-slide-toggle class="float-right" [checked]="editMode" color="warn"
           *ngIf="selectedTab < 2"
           (change)="toggleEdit()">Toggle Edit</mat-slide-toggle>
 </div>
@@ -65,21 +65,21 @@
         </tr>
         </thead>
       <tbody>
-        <tr class="mat-row dataRow" *ngFor="let game of games; let i = index" 
+        <tr class="mat-row dataRow" *ngFor="let game of games; let i = index"
             (click)="openGame(game, i)"
-            style="cursor: pointer;">    
+            style="cursor: pointer;">
           <td class="mat-cell" [style.background-color]=" false ? '#acffac' : 'none'">
-            {{game.value.teams?.team1Name.length > 9 ? 
+            {{game.value.teams?.team1Name.length > 9 ?
               game.value.teams?.team1Name.substring(0,9)+'...' :
               game.value.teams?.team1Name}}</td>
           <td class="mat-cell">{{game.value.teams?.team1Score}}</td>
           <td class="mat-cell" [style.background-color]="false ? '#acffac' : 'none'">
-            {{game.value.teams?.team2Name.length > 9 ? 
+            {{game.value.teams?.team2Name.length > 9 ?
               game.value.teams?.team2Name.substring(0,9)+'...' :
               game.value.teams?.team2Name}}</td>
           <td class="mat-cell">{{game.value.teams?.team2Score}}</td>
           <td class="mat-cell" style="padding:0 10px;" *ngIf="editMode">
-            <button class="btn btn-sm btn-danger" 
+            <button class="btn btn-sm btn-danger"
             (click)="updateDeleteItems(game.value.teams,i); toggleDelete(); $event.stopPropagation()">X</button>
           </td>
         </tr>
@@ -89,7 +89,7 @@
   <mat-tab *ngIf="selectedTab > 0">
     <ng-template mat-tab-label  style="visibility: hidden">
       Hands
-    </ng-template>      
+    </ng-template>
     <table class="mat-table mat-elevation-z8">
       <thead>
         <tr class="mat-header-row">
@@ -107,10 +107,10 @@
         </tr>
         </thead>
       <tbody>
-        <tr class="mat-row dataRow" *ngFor="let hand of currentGame.hands; let i = index" 
+        <tr class="mat-row dataRow" *ngFor="let hand of currentGame.hands; let i = index"
             style="cursor: pointer;"
             (click)="openHand(hand, i)">
-  
+
           <td class="mat-cell">
             {{hand.bettor.length > 9 ?
               hand.bettor.substring(0,9)+'...' :
@@ -123,7 +123,7 @@
           <td class="mat-cell" [ngStyle]="getColors(hand, 1)">{{hand.team1Sum}}</td>
           <td class="mat-cell" [ngStyle]="getColors(hand, 2)">{{hand.team2Sum}}</td>
           <td class="mat-cell" style="padding:0 10px;" *ngIf="editMode">
-            <button class="btn btn-sm btn-danger" 
+            <button class="btn btn-sm btn-danger"
             (click)="updateDeleteHand(hand, i); toggleDelete(); $event.stopPropagation();">X</button>
           </td>
         </tr>
@@ -137,7 +137,7 @@
       </tbody>
     </table>
   </mat-tab>
-  
+
   <mat-tab *ngIf="selectedTab === 2">
     <ng-template mat-tab-label  style="visibility: hidden">
       Hand
@@ -145,36 +145,45 @@
     <br>
     <!-- Form fields -->
     <mat-form-field class="example-form-field">
-      <input #nameInput1 matInput type="text" placeholder="Team 1" 
+      <input #nameInput1 matInput type="text" placeholder="Team 1"
               [(ngModel)]="team1"
               (keyup)="checkNames();"
               required />
-      <button mat-button *ngIf="team1" 
-              matSuffix mat-icon-button aria-label="Clear" 
+      <button mat-button *ngIf="team1"
+              matSuffix mat-icon-button aria-label="Clear"
               (click)="team1=''; changed=true;">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
 
     <mat-form-field class="example-form-field">
-      <input #nameInput2 matInput type="text" placeholder="Team 2" 
+      <input #nameInput2 matInput type="text" placeholder="Team 2"
               [(ngModel)]="team2"
               (keyup)="checkNames();"
               required />
-      <button mat-button *ngIf="team2" 
-              matSuffix mat-icon-button aria-label="Clear" 
+      <button mat-button *ngIf="team2"
+              matSuffix mat-icon-button aria-label="Clear"
               (click)="team2=''; checked=true;">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
 
     <mat-form-field class="example-form-field">
-      <input placeholder="Bet" matInput [(ngModel)]="testHand.bet" (change)="checkChange();"/>         
-      <button mat-button *ngIf="testHand.bet" 
+      <!-- <input placeholder="Bet"
+             type="number"
+             matInput
+             [(ngModel)]="testHand.bet"
+             (change)="checkChange();"
+             required/> -->
+      <mat-select placeholder="Bet" [(ngModel)]="testHand.bet"
+        (change)="checkChange();">
+        <mat-option *ngFor="let bet of betValues" [value]="bet">{{bet === 250 ? 'Capot' : bet}}</mat-option>
+      </mat-select>
+      <!-- <button mat-button *ngIf="testHand.bet"
               matSuffix mat-icon-button aria-label="Clear" (click)="testHand.bet='';checkChange();">
         <mat-icon>close</mat-icon>
-      </button>
-    </mat-form-field>   
+      </button> -->
+    </mat-form-field>
 
     <mat-form-field class="example-form-field">
         <mat-select placeholder="Bettor" [(ngModel)]="testHand.bettor" (change)="checkChange();">
@@ -187,7 +196,7 @@
               team2.substring(0,9)+'...' :
               team2}}</mat-option>
         </mat-select>
-    </mat-form-field>    
+    </mat-form-field>
 
     <mat-form-field class="example-form-field">
       <mat-select placeholder="Suit" [(ngModel)]="testHand.suit" (change)="checkChange();">
@@ -196,69 +205,69 @@
     </mat-form-field>
 
     <mat-form-field class="example-form-field">
-      <mat-select placeholder="Special" [(ngModel)]="testHand.special" 
+      <mat-select placeholder="Special" [(ngModel)]="testHand.special"
                   (change)="updateMultiplier($event.value);checkChange();">
         <mat-option value="">None</mat-option>
         <mat-option value="Coincher">Coincher</mat-option>
         <mat-option value="Sur-Coincher">Sur-Coincher</mat-option>
       </mat-select>
-    </mat-form-field> 
+    </mat-form-field>
 
     <mat-form-field class="example-form-field">
-      <input matInput type="number" max="162" min="0" 
+      <input matInput type="number" max="162" min="0"
               placeholder="{{team1.length > 9 ?
                               team1.substring(0,9)+'...' :
-                              team1}} Score" 
-              [(ngModel)]="testHand.team1Score" 
+                              team1}} Score"
+              [(ngModel)]="testHand.team1Score"
               (keyup)="updateTeamScores(1); checkChange();"
-              />
-      <button mat-button *ngIf="testHand.team1Score" 
-              matSuffix mat-icon-button aria-label="Clear" 
+              required/>
+      <button mat-button *ngIf="testHand.team1Score"
+              matSuffix mat-icon-button aria-label="Clear"
               (click)="testHand.team1Score=0;testHand.team2Score=162;checkChange();">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
 
     <mat-form-field class="example-form-field">
-      <input matInput type="number" max="162" min="0" 
+      <input matInput type="number" max="162" min="0"
               placeholder="{{team2.length > 9 ?
                               team2.substring(0,9)+'...' :
-                              team2}} Score" 
-              [(ngModel)]="testHand.team2Score" 
+                              team2}} Score"
+              [(ngModel)]="testHand.team2Score"
               (keyup)="updateTeamScores(2); checkChange();"
-              />
-      <button mat-button *ngIf="testHand.team2Score" 
-              matSuffix mat-icon-button aria-label="Clear" 
+              required/>
+      <button mat-button *ngIf="testHand.team2Score"
+              matSuffix mat-icon-button aria-label="Clear"
               (click)="testHand.team2Score=0;testHand.team1Score=162;checkChange();">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
 
     <mat-form-field class="example-form-field">
-      <input matInput type="number" min="0" 
+      <input matInput type="number" min="0"
               placeholder="{{team1.length > 9 ?
                               team1.substring(0,9)+'...' :
-                              team1}} Bonus" 
-              [(ngModel)]="testHand.team1Bonus" 
+                              team1}} Bonus"
+              [(ngModel)]="testHand.team1Bonus"
               (change)="updateTeamScores(1); checkChange();"
               />
-      <button mat-button *ngIf="testHand.team1Bonus" 
-              matSuffix mat-icon-button aria-label="Clear" 
+      <button mat-button *ngIf="testHand.team1Bonus"
+              matSuffix mat-icon-button aria-label="Clear"
               (click)="testHand.team1Bonus=0; checkChange();">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
 
     <mat-form-field class="example-form-field">
-      <input matInput type="number" min="0" 
+      <input matInput type="number" min="0"
               placeholder="{{team2.length > 9 ?
                               team2.substring(0,9)+'...' :
-                              team2}} Bonus" 
-              [(ngModel)]="testHand.team2Bonus" 
+                              team2}} Bonus"
+              [(ngModel)]="testHand.team2Bonus"
               (change)="updateTeamScores(2); checkChange();"
               />
-      <button mat-button *ngIf="testHand.team2Bonus" 
-              matSuffix mat-icon-button aria-label="Clear" 
+      <button mat-button *ngIf="testHand.team2Bonus"
+              matSuffix mat-icon-button aria-label="Clear"
               (click)="testHand.team2Bonus=0; checkChange();">
         <mat-icon>close</mat-icon>
       </button>
@@ -267,21 +276,21 @@
     <br>
     <!-- Removed the below condition because when changing team name that was also
     the bettor, button remained disabled -->
-    <!-- (testHand.bettor !== team1 && 
+    <!-- (testHand.bettor !== team1 &&
       testHand.bettor !== team2) || -->
-    <fieldset #field [disabled]="!changed || testHand.bet < 80 || 
+    <fieldset #field [disabled]="!changed || testHand.bet < 80 ||
       team1==='' || team2==='' ||
-      testHand.team1Score < 0 || testHand.team1Score > 162 || 
-      testHand.team2Score < 0 || testHand.team2Score > 162 || 
+      testHand.team1Score < 0 || testHand.team1Score > 162 ||
+      testHand.team2Score < 0 || testHand.team2Score > 162 ||
       (testHand.team1Score + testHand.team2Score !== 162) ||
-      !testHand.bettor || 
+      !testHand.bettor ||
       testHand.team1Bonus < 0 || testHand.team2Bonus < 0">
       <button mat-raised-button color="primary"
         [disabled]="field.disabled"
         (click)="updateGame()">
         {{newHand ? 'Create Hand' : currentGameId ? 'Update' : 'Create Game'}}</button>
     </fieldset>
-        
+
   </mat-tab>
 </mat-tab-group>
 
